deployments/jellyfin/jellyfin-exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin-exporter
  namespace: monitoring
  labels:
    app: jellyfin-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin-exporter
  template:
    metadata:
      labels:
        app: jellyfin-exporter
    spec:
      containers:
        - name: jellyfin-exporter
          image: rebelcore/jellyfin_exporter:latest
          ports:
            - containerPort: 9594
      imagePullSecrets:
        - name: ghcr-secret
