deployments/jellyfin/jellyfin-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-exporter
  namespace: monitoring
spec:
  selector:
    app: jellyfin-exporter
  ports:
    - protocol: TCP
      name: metrics
      port: 9594
      targetPort: 9594
