deployments/jellyfin/jellyfin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  selector:
    app: jellyfin
  ports:
    - port: 8096
      targetPort: 8096
      nodePort: 32326
  type: NodePort
